@@ -101,7 +101,7 @@ abstract class JPlugin extends JEvent
 		}
 
 		$lang =& JFactory::getLanguage();
-		return $lang->load(strtolower($extension), $basePath) || $lang->load ('joomla', $basePath.DS.'plugins'.$this->_type.DS.$this->_name);
+		return $lang->load(strtolower($extension), $basePath) || $lang->load (strtolower($extension), $basePath.DS.'plugins'.DS.$this->_type.DS.$this->_name);
 	}
 
 
